# mathicsscript

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  ChangeLog-spell-corrected.diff  MANIFEST.in  Makefile  NEWS.md  README.rst  __main__.py  convert.py  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements-full.txt  rst2html.py  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autoblack.yml  basic.yml  isort-and-black-checks.yml  macos.yaml  osx.yaml  osx.yml  ubuntu.yaml  ubuntu.yml  windows.yml
admin-tools/: check-versions.sh  generate-inputrc.py  make-JSON-tables.sh  make-dist.sh  make-tables.sh  pyenv-versions
mathicsscript/: .gitignore  __init__.py  __main__.py  asymptote.py  bindkeys.py  completion.py  config.asy  fake_psviewer.py  fixcairo.py  format.py  inputrc  inputrc-greek-letters  inputrc-no-unicode  inputrc-unicode  interrupt.py  mmalexer.py  settings.m  settings.py  term_background.py  termshell-gnureadline.py  termshell.py  termshell_gnu.py  termshell_prompt.py  user-settings.m  version.py
mathicsscript/autoload/: settings.m
mathicsscript/data/: README.md  inputrc-no-unicode  inputrc-unicode  mma-tables.json
screenshots/: README.md  mathicsscript1-prompt.cast  mathicsscript1.cast  mathicsscript2.cast
settings/: settings.m
test/: helper.py  test_completion.py  test_returncode.py  test_settings.py  test_term_background.py
tmathics/: __main__.py  termshell.py
