[build-system]
requires = [
    "setuptools",
    # needed for building tables for the sdist:
    "PyYAML",
    "click",
]
build-backend = "setuptools.build_meta"

[project]
name = "mathicsscript"
description = "Command-line interface to Mathics3"
dependencies = [
    "Mathics_Scanner>=2.0.0",
    "Mathics3 >= 9.0.0",
    "click >= 8.0.0",
    "colorama",
    "columnize",
    "networkx",
    "prompt_toolkit>=3.0.18",
    "Pygments>=2.9.0",  # Want something late enough that has the "inkpot" style
    "mathics_pygments>=1.0.2",
    "term-background >= 1.0.1",
]
requires-python = ">=3.10"
readme = "README.rst"
license = "GPL-3.0-or-later"
keywords = ["Mathematica", "Wolfram", "Interpreter", "Shell", "Math", "CAS"]
maintainers = [
    {name = "Mathics3 Group"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Interpreters",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
]
full = [
     "PyYAML", # Used for admin-tools/make-tables.sh to build JSON tables
     "PyQT6",  # For interactive display of graphs via matplotlib
     "cairosvg",  # For rendering Plots and Graphs as SVGs via matplotlib
     "cson", # for xasy
     "matplotlib" # For rendering SVG plots
]

[project.scripts]
 mathicsscript = "mathicsscript.__main__:main"
"fake_psviewer.py" = "mathicsscript.fake_psviewer:main"

[project.urls]
Homepage = "https://mathics.org/"

[tool.setuptools.package-data]
"mathics_scanner" = [
    "mathicsscript/data/inputrc-no-unicode",
    "mathicsscript/data/inputrc-unicode",
    "mathicsscript/user-settings.m",
    "mathicsscript/autoload/settings.m",
    "mathicsscript/config.asy",
]

[tool.setuptools.dynamic]
version = {attr = "mathicsscript.version.__version__"}
